src/test/deca/context/invalid/SO/inexistantType.deca
// Description:
//    Initialisation avec un type inexistant (pas présent dans EnvType)
//
// Resultats:
//    ligne 11 : Erreur, type inexistant
//
// Historique:
//    cree le 10/01/2022

{
    inexistant x;
}